checkout added, views, templates added

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -110,7 +110,7 @@
                                         </span>
                                         <span class="text-uppercase">Add more treats</span>
                                     </a>
-                                    <a href="" class="btn btn-black rounded-0 btn-lg">
+                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
                                         <span class="text-uppercase">Secure Checkout</span>
                                         <span class="icon">
                                             <i class="fas fa-lock"></i>
