--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -3,7 +3,7 @@
 {% load basket_tools %}
 
 {% block extra_css %}
-        <link rel="stylesheet" href="{% static 'chekout/css/checkout.css' %}">
+        <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
 {% block page_header %}
