--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Shopping Basket</h2>
+                <h2 class="logo-font text-center mb-4">Shopping Basket</h2>
                 <hr>
             </div>
         </div>
