--- a/templates/base.html
+++ b/templates/base.html
@@ -79,16 +79,16 @@
                                 <p class="text-black my-0">My Account</p>
                             </div>
                         </a>
-                        <div class="text-black bg-info dropdown-menu border-0" aria-labelledby="user-options">
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item text-black ">Product Management</a>
+                                    <a href="" class="dropdown-item">Product Management</a>
                                 {% endif %}
-                                <a href="{% url 'profile' }}" class="dropdown-item text-black">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="text-black dropdown-item">Logout</a>
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
-                                <a href="{% url 'account_signup' %}" class="text-black dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="text-black dropdown-item">Login</a>
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
                         </div>
                     </li>
