--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -36,7 +36,15 @@
                                 <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                             </a>
                         </p>
+                    {% endif %} 
+                                                               
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit Product</a>
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete Product</a>
+                        </small>
                     {% endif %}
+
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
                         {% csrf_token %}
