--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -137,13 +137,13 @@
     
     <script type="text/javascript">
         $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
+            let selector = $(this);
+            let currentUrl = new URL(window.location);
 
-            var selectedVal = selector.val();
+            let selectedVal = selector.val();
             if(selectedVal != "reset"){
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
+                let sort = selectedVal.split("_")[0];
+                let direction = selectedVal.split("_")[1];
 
                 currentUrl.searchParams.set("sort", sort);
                 currentUrl.searchParams.set("direction", direction);
