--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -115,6 +115,11 @@
             </div>
         </div>
     </div>
+    <div class="bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100 text-black">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i></i>
+        </a>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
