--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -142,6 +142,11 @@
             </span>
         </h1>
     </div>
+    <div class="bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100 text-black">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i></i>
+        </a>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
