--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -74,6 +74,9 @@
                 </div>
             </div>
         </div>
+        <td>
+            <a href=""><span>Hello {{ favourite_list }}</span></a>
+        </td>
 {% endblock %}
 
 {% block postloadjs %}
