--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,12 +37,29 @@
                         </a>
                     </p>
                     {% endif %}
+
                     {% if request.user.is_superuser %}
+                        <!-- Trigger/Open The Modal -->
+                        <small>
+                            <button class="text-danger" id="myBtn">Delete Product</button>
+                        </small>
+                        <!-- The Modal -->
+                        <div id="myModal" class="modal">
+                            <!-- Modal content -->
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <p>Are you sure you want to delete this item?</p>
+                                <div>
+                                    <a class="text-danger" href="{% url 'delete_product' product.id %}"><button class="text-danger">Delete Product</button></a>
+                                    <a class="text-info" href="{% url 'product_detail' product.id %}"><button class="text-info">Cancel</button></a>
+                                </div>
+                            </div>
+                        </div>
                         <small class="ml-3">
-                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                            <button href="{% url 'edit_product' product.id %}">Edit Product</button>
                         </small>
                     {% endif %}
+
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
                         {% csrf_token %}
@@ -164,5 +181,33 @@
 
 {% block postloadjs %}
 {{ block.super }}
+<script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+    
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+    
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+    
+    // When the user clicks the button, open the modal 
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+    
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+</script>    
+
 {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
