--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,6 +33,57 @@ ul {
     padding-inline: 0;
 }
 
+.favourite-heart {
+    float: right;
+}
+
+.fa-heart {
+    color: red;
+}
+
+.far {
+    color: red;
+}
+
+/* The Modal (background) 
+https://www.w3schools.com/howto/howto_css_modals.asp */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 .shop-now-button {
     background: black;
     color: white;
@@ -85,7 +136,7 @@ ul {
 	top: 0;
 	left: 0;
 	position: fixed;
-	background: white;
+	background: #f98787;
 	z-index: -1;
 }
 
@@ -290,7 +341,7 @@ input[name='q']::placeholder {
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 250px;
+        padding-top: 200px;
     }
 
     body {
