--- a/products/templates/products/edit_review.html
+++ b/products/templates/products/edit_review.html
@@ -10,22 +10,24 @@
 {% endblock %}
 
 {% block content %}
-<form action="{% url 'edit_review' product.id review.id %}" enctype="multipart/form-data" method="POST">
-    {% csrf_token %}
-    <div class="row">
-        <div class="col">
-            {{ form|crispy }}
+<div class="container">
+    <form action="{% url 'edit_review' product.id review.id %}" enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        <div class="row">
+            <div class="col">
+                {{ form|crispy }}
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-6 ">
-            <button type="reset" class="btn bg-danger">
-                Reset Form <i class="fas fa-undo ml-2"></i>
-            </button>
+        <div class="row">
+            <div class="col-6 ">
+                <button type="reset" class="delete-button btn-sm">
+                    Reset Form <i class="fas fa-undo ml-2"></i>
+                </button>
+            </div>
+            <div class="col-6">
+                <button class="btn-sml edit-button" type="submit">Edit Review <i class="fas fa-plus ml-2"></i></button>
+            </div>
         </div>
-        <div class="col-6">
-            <button class="button bg-info" type="submit">Edit Review <i class="fas fa-plus ml-2"></i></button>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
 {% endblock %}
