--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,13 +26,13 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="text-black col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                        <a class="text-black" href="{% url 'products' %}?category={{ product.category.name }}">
                             <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                         </a>
                     </p>
@@ -41,7 +41,7 @@
                     {% if request.user.is_superuser %}
                         <!-- Trigger/Open The Modal -->
                         <small>
-                            <button class="text-danger" id="myBtn">Delete Product</button>
+                            <button class="delete-button text-danger" id="myBtn">Delete Product</button>
                         </small>
                         <!-- The Modal -->
                         <div id="myModal" class="modal">
@@ -50,13 +50,13 @@
                                 <span class="close">&times;</span>
                                 <p>Are you sure you want to delete this item?</p>
                                 <div>
-                                    <a class="text-danger" href="{% url 'delete_product' product.id %}"><button class="text-danger">Delete Product</button></a>
-                                    <a class="text-info" href="{% url 'product_detail' product.id %}"><button class="text-info">Cancel</button></a>
+                                    <a class="text-danger" href="{% url 'delete_product' product.id %}"><button class=" delete-button text-danger">Delete Product</button></a>
+                                    <a class="text-info" href="{% url 'product_detail' product.id %}"><button class="edit-button text-info">Cancel</button></a>
                                 </div>
                             </div>
                         </div>
                         <small class="ml-3">
-                            <button href="{% url 'edit_product' product.id %}">Edit Product</button>
+                            <button class="edit-button"><a class="edit-button" href="{% url 'edit_product' product.id %}">Edit Product</a></button>
                         </small>
                     {% endif %}
 
@@ -107,45 +107,46 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="product-details-container mb-5 mt-md-5 text-black">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <h3>Reviews</h3>
                 {% if reviews %}
                     {% for review in product.reviews.all %}
-                        <div class="col-6">
-                            <h4>{{ review.review_title }}</h4>
-                        </div>
                         <div class="card">
+                            <h4>{{ review.review_title }}</h4>
                             <p>{{ review.review_body }}</p>
                             <p>{{ review.author }}</p>
                             <p>{{ review.date_added }}</p>
                         </div>
                         {% if user == review.author %}
-                        <a href="{% url 'edit_review' product.id review.id %}">Edit Review</a>
-                        
-                        <form action="{% url 'delete_review' product.id review.id %}" method="POST">
-                            {% csrf_token %}
-                            <div class="row">
-                                <div class="col-6">
-                                    <button class="button bg-warning" type="submit">Delete Review <i class="fas fa-plus ml-2"></i></button>
-                                </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <button class="edit-button btn-sm"><a class="edit-button" href="{% url 'edit_review' product.id review.id %}">Edit Review</a></button>
                             </div>
-                        </form>
+                            <div class="col-6">
+                                <form action="{% url 'delete_review' product.id review.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <button class="delete-button btn-sm" type="submit">Delete Review</button>
+                                </form>
+                            </div>
+
+                        </div>
                         {% endif %}
                     {% endfor %}
                 {% else %}
-                        <div class="col">
-                            <h4 class="">There are no reviews for {{ product.name }} yet.</h4>
+                    <div class="col">
+                        <div class="card">
+                            <h4>There are no reviews for {{ product.name }} yet.</h4>
                             <h5 class="">Why don't you add one?</h5>
                         </div>
+                    </div>
                 {% endif %}
             </div>
-        </div>
-    
-        {% if user.is_authenticated %}
-        <div class="row">
-            <div class="col-4">
-                <h5 class="">Add your review here</h5>
+            {% if user.is_authenticated %}
+            <div class="col-12 col-md-6 col-lg-4 offset-lg">
+                <h5>Add your review here</h5>
                 <form action="{% url 'add_review' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="row">
@@ -154,20 +155,20 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 ">
-                            <button type="reset" class="btn bg-danger">
+                        <div class="col-6">
+                            <button type="reset" class="delete-button btn-sm bg-danger">
                                 Reset Form <i class="fas fa-undo ml-2"></i>
                             </button>
                         </div>
                         <div class="col-6">
-                            <button class="button bg-info" type="submit">Add Review <i class="fas fa-plus ml-2"></i></button>
+                            <button class="button edit-button btn-sm" type="submit">Add Review <i class="fas fa-plus ml-2"></i></button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     
-        {% else %}
+            {% else %}
         <div class="rows">
             <div class="col-6">
                 <h6 class="">
