--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,7 +66,7 @@ https://www.w3schools.com/howto/howto_css_modals.asp */
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
   }
   
 /* The Close Button */
@@ -87,56 +87,12 @@ https://www.w3schools.com/howto/howto_css_modals.asp */
 .stage {
     width: 100%;
   }
-  
-.curtain-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-  
-.curtain-panel {
-    display: flex;
-    height: 100%;
-    cursor: pointer;
-    overflow: hidden;
-  }
-  
-.curtain-panel .curtain {
-    width: 100%;
-    background: url('/media/sweets.jpeg') no-repeat center center fixed;
-    transition: transform 0.5s ease-out;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-  }
-  
-.curtain-panel .left-curtain:before {
-    left: 0;
-  }
-  
-.curtain-panel .right-curtain:before {
-    right: 0;
-  }
-  
-.curtain-trigger {
-    visibility: hidden;
-    position: absolute;
-  }
-  
-.curtain-trigger:checked ~ .left-curtain {
-    transform: translateX(calc(-100% + 2em));
-  }
-  
-.curtain-trigger:checked ~ .right-curtain {
-    transform: translateX(calc(100% - 2em));
-  }
 
 .shop-button {
     background: black;
     color: white;
-    margin-left: 25%;
+    align-items: center;
+    margin: 25%;
 }
 
 .shop-now-button {
@@ -171,6 +127,23 @@ https://www.w3schools.com/howto/howto_css_modals.asp */
 .btn-black:focus {
     background: #222;
     color: white;
+}
+
+.edit-button {
+    color: white !important;
+    background-color: blue;
+    border: 1px solid black;
+}
+
+.delete-button {
+    color: white !important;
+    background-color: red;
+    border: 1px solid black;
+}
+
+.card {
+margin-bottom: 1rem !important;
+margin-top: 1rem !important;
 }
 
 .text-black {
