--- a/basket/templates/basket/product-info.html
+++ b/basket/templates/basket/product-info.html
@@ -1,2 +1,2 @@
 <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-<p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+<p class="my-0 small">SKU: {{ item.product.sku|upper }}</p>
