--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -11,12 +11,12 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container text-black">
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
                 <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Edit a Product</h5>
+                <h5>Edit a Product</h5>
                 <hr>
             </div>
         </div>
