--- a/products/templates/products/edit_review.html
+++ b/products/templates/products/edit_review.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container text-black">
     <form action="{% url 'edit_review' product.id review.id %}" enctype="multipart/form-data" method="POST">
         {% csrf_token %}
         <div class="row">
